{
  "version": 4,
  "terraform_version": "1.8.4",
  "serial": 93,
  "lineage": "dc03dcc7-6be2-8ba8-ca70-461d02a0dc1b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_instance_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08118ec008b505de8",
            "arn": "arn:aws:ec2:us-east-1:685652915875:elastic-ip/eipalloc-08118ec008b505de8",
            "associate_with_private_ip": "10.0.1.143",
            "association_id": "eipassoc-027235067e0c0084f",
            "domain": "vpc",
            "id": "eipalloc-08118ec008b505de8",
            "instance": "i-091f85772837a7177",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0d91ed9332d397a01",
            "private_dns": "ip-10-0-1-143.ec2.internal",
            "private_ip": "10.0.1.143",
            "public_dns": "ec2-52-3-24-52.compute-1.amazonaws.com",
            "public_ip": "52.3.24.52",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.nat_instance",
            "aws_network_interface.nat_instance_interface",
            "aws_security_group.nat_instance_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.testing_vpc",
            "data.aws_key_pair.nat"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nat_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ae8f15ae66fe8cda",
            "arn": "arn:aws:ec2:us-east-1:685652915875:instance/i-091f85772837a7177",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-091f85772837a7177",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "nat",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0d91ed9332d397a01"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d91ed9332d397a01",
            "private_dns": "ip-10-0-1-143.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.143",
            "public_dns": "ec2-18-212-205-144.compute-1.amazonaws.com",
            "public_ip": "18.212.205.144",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0cae2b6fba3c9a9be",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d50214d14db4874d",
            "tags": {
              "Name": "nat_instance"
            },
            "tags_all": {
              "Name": "nat_instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0dc20233e630cda21"
            ]
          },
          "dependencies": [
            "aws_network_interface.nat_instance_interface",
            "aws_security_group.nat_instance_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.testing_vpc",
            "data.aws_key_pair.nat"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ae8f15ae66fe8cda",
            "arn": "arn:aws:ec2:us-east-1:685652915875:instance/i-0bd8887802f360782",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bd8887802f360782",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "nat",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ef7bc0934fc30587",
            "private_dns": "ip-10-0-2-250.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.250",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07e2249104d86a25b",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e8210d88b4db8230",
            "tags": {
              "Name": "private_instance"
            },
            "tags_all": {
              "Name": "private_instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0dcce413a7980ad1a"
            ]
          },
          "dependencies": [
            "aws_security_group.private_instance_sg",
            "aws_subnet.private",
            "aws_vpc.testing_vpc",
            "data.aws_key_pair.nat"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:685652915875:internet-gateway/igw-028b14ce531840a1b",
            "id": "igw-028b14ce531840a1b",
            "owner_id": "685652915875",
            "tags": {
              "Name": "main-igw"
            },
            "tags_all": {
              "Name": "main-igw"
            },
            "vpc_id": "vpc-03613716b2eefa1f6"
          },
          "dependencies": [
            "aws_vpc.testing_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "nat_instance_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:685652915875:network-interface/eni-0d91ed9332d397a01",
            "id": "eni-0d91ed9332d397a01",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0a:ff:c7:b7:89:2b",
            "owner_id": "685652915875",
            "private_dns_name": "ip-10-0-1-143.ec2.internal",
            "private_ip": "10.0.1.143",
            "private_ip_list": [
              "10.0.1.143"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.143"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0dc20233e630cda21"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d50214d14db4874d",
            "tags": {
              "Name": "nat_instance_interface"
            },
            "tags_all": {
              "Name": "nat_instance_interface"
            }
          },
          "dependencies": [
            "aws_security_group.nat_instance_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.testing_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "nat_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-095e230b7b73b09481080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "eni-0d91ed9332d397a01",
            "origin": "CreateRoute",
            "route_table_id": "rtb-095e230b7b73b0948",
            "state": "blackhole",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_interface.nat_instance_interface",
            "aws_route_table.private_rt",
            "aws_security_group.nat_instance_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.testing_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-028b14ce531840a1b",
            "id": "r-rtb-0cf6a8eb8dba3c7b71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0cf6a8eb8dba3c7b7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public_rt",
            "aws_vpc.testing_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:685652915875:route-table/rtb-095e230b7b73b0948",
            "id": "rtb-095e230b7b73b0948",
            "owner_id": "685652915875",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private_rt"
            },
            "tags_all": {
              "Name": "private_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-03613716b2eefa1f6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.testing_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:685652915875:route-table/rtb-0cf6a8eb8dba3c7b7",
            "id": "rtb-0cf6a8eb8dba3c7b7",
            "owner_id": "685652915875",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "public_rt"
            },
            "tags_all": {
              "Name": "public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-03613716b2eefa1f6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.testing_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00e8a9123380d8fab",
            "route_table_id": "rtb-095e230b7b73b0948",
            "subnet_id": "subnet-0e8210d88b4db8230"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private",
            "aws_vpc.testing_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-028fbab0be97cbb56",
            "route_table_id": "rtb-0cf6a8eb8dba3c7b7",
            "subnet_id": "subnet-0d50214d14db4874d"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.testing_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nat_instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:685652915875:security-group/sg-0dc20233e630cda21",
            "description": "Security group for NAT instance",
            "egress": [],
            "id": "sg-0dc20233e630cda21",
            "ingress": [],
            "name": "nat_instance_security_group",
            "name_prefix": "",
            "owner_id": "685652915875",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nat_instance_sg"
            },
            "tags_all": {
              "Name": "nat_instance_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03613716b2eefa1f6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.testing_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:685652915875:security-group/sg-0dcce413a7980ad1a",
            "description": "Security group for instance in private subnet",
            "egress": [],
            "id": "sg-0dcce413a7980ad1a",
            "ingress": [],
            "name": "private_instance_security_group",
            "name_prefix": "",
            "owner_id": "685652915875",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "private_instance_sg"
            },
            "tags_all": {
              "Name": "private_instance_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03613716b2eefa1f6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.testing_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nat_to_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-372217372",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0dc20233e630cda21",
            "security_group_rule_id": "sgr-03f79c4cc23fbbfaf",
            "self": false,
            "source_security_group_id": "sg-0dcce413a7980ad1a",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.nat_instance_sg",
            "aws_security_group.private_instance_sg",
            "aws_vpc.testing_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nat_to_private_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2194505830",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0dc20233e630cda21",
            "security_group_rule_id": "sgr-0d9b755965aa79bb2",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.nat_instance_sg",
            "aws_vpc.testing_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "private_to_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 0,
            "id": "sgrule-2464317838",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0dcce413a7980ad1a",
            "security_group_rule_id": "sgr-04ca50088b557378c",
            "self": false,
            "source_security_group_id": "sg-0dc20233e630cda21",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.nat_instance_sg",
            "aws_security_group.private_instance_sg",
            "aws_vpc.testing_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "private_to_nat_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2184315307",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0dcce413a7980ad1a",
            "security_group_rule_id": "sgr-0bfd84d0b2dc90a3d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.private_instance_sg",
            "aws_vpc.testing_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:685652915875:subnet/subnet-0e8210d88b4db8230",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e8210d88b4db8230",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "685652915875",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet"
            },
            "tags_all": {
              "Name": "private-subnet"
            },
            "vpc_id": "vpc-03613716b2eefa1f6"
          },
          "dependencies": [
            "aws_vpc.testing_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:685652915875:subnet/subnet-0d50214d14db4874d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d50214d14db4874d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "685652915875",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet"
            },
            "tags_all": {
              "Name": "public_subnet"
            },
            "vpc_id": "vpc-03613716b2eefa1f6"
          },
          "dependencies": [
            "aws_vpc.testing_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "testing_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:685652915875:vpc/vpc-03613716b2eefa1f6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ec2ba3b25889ad19",
            "default_route_table_id": "rtb-0984684b0d0434244",
            "default_security_group_id": "sg-042856ff6a9eb44b0",
            "dhcp_options_id": "dopt-0f157263f45e98feb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03613716b2eefa1f6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0984684b0d0434244",
            "owner_id": "685652915875",
            "tags": {
              "Name": "testing_vpc"
            },
            "tags_all": {
              "Name": "testing_vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_http_to_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:685652915875:security-group-rule/sgr-0fce2f8708c0101e8",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0fce2f8708c0101e8",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0dc20233e630cda21",
            "security_group_rule_id": "sgr-0fce2f8708c0101e8",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.nat_instance_sg",
            "aws_vpc.testing_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_https_to_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:685652915875:security-group-rule/sgr-033a2f4ce6c2a70af",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-033a2f4ce6c2a70af",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0dc20233e630cda21",
            "security_group_rule_id": "sgr-033a2f4ce6c2a70af",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.nat_instance_sg",
            "aws_vpc.testing_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_icmp_to_anywhere",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:685652915875:security-group-rule/sgr-07f081b1ae219d8e2",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": -1,
            "id": "sgr-07f081b1ae219d8e2",
            "ip_protocol": "icmp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0dc20233e630cda21",
            "security_group_rule_id": "sgr-07f081b1ae219d8e2",
            "tags": null,
            "tags_all": {},
            "to_port": -1
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.nat_instance_sg",
            "aws_vpc.testing_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http_from_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:685652915875:security-group-rule/sgr-04e0beab707da1a88",
            "cidr_ipv4": "10.0.2.0/24",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-04e0beab707da1a88",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0dc20233e630cda21",
            "security_group_rule_id": "sgr-04e0beab707da1a88",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.nat_instance_sg",
            "aws_subnet.private",
            "aws_vpc.testing_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_https_from_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:685652915875:security-group-rule/sgr-07837b2f38e29c710",
            "cidr_ipv4": "10.0.2.0/24",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-07837b2f38e29c710",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0dc20233e630cda21",
            "security_group_rule_id": "sgr-07837b2f38e29c710",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.nat_instance_sg",
            "aws_subnet.private",
            "aws_vpc.testing_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_icmp_from_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:685652915875:security-group-rule/sgr-0e27c962c96fadcb8",
            "cidr_ipv4": "10.0.2.0/24",
            "cidr_ipv6": null,
            "description": null,
            "from_port": -1,
            "id": "sgr-0e27c962c96fadcb8",
            "ip_protocol": "icmp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0dc20233e630cda21",
            "security_group_rule_id": "sgr-0e27c962c96fadcb8",
            "tags": null,
            "tags_all": {},
            "to_port": -1
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.nat_instance_sg",
            "aws_subnet.private",
            "aws_vpc.testing_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh_from_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:685652915875:security-group-rule/sgr-0d3e076e24dc27eb3",
            "cidr_ipv4": "10.0.2.0/24",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0d3e076e24dc27eb3",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0dc20233e630cda21",
            "security_group_rule_id": "sgr-0d3e076e24dc27eb3",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.nat_instance_sg",
            "aws_subnet.private",
            "aws_vpc.testing_vpc"
          ]
        }
      ]
    }
  ]
}